[tool.poetry]
name = "aiohttp-runner"
version = "0.4.0"
description = "Wraps aiohttp or gunicorn server for aiohttp application."
authors = ["xppt <21246102+xppt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3"
async-exit-stack = "^1"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
